# FastAPI

./: main.py
apps/: pyproject.toml
apps/apps/: database.py  main.py
apps/apps/data/: model.py  router.py  schema.py
db/: db_class.py
hospetter/: .env  pyproject.toml
old/: dependency.txt  main.py
old/db/: connection.py
routes/: sensor.py
